--- a/index2.css
+++ b/index2.css
@@ -1,4 +1,8 @@
-div {
+body {
+  overflow: hidden;
+}
+
+section {
   width: 250px;
   height: 50px;
   background: black;
@@ -9,6 +13,7 @@ div {
   align-items: center;
   border-radius: 20px;
   position: relative;
+  mix-blend-mode: multiply;
 }
 
 button {
@@ -27,4 +32,37 @@ button {
 button:nth-child(3) {
   visibility: hidden;
   position: absolute;
+}
+
+.mousemove {
+  height: 10px;
+  width: 10px;
+  border: 2px solid rgba(21, 21, 21, 0.868);
+  border-radius: 50px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  z-index: -10;
+}
+
+.mousemove2 {
+  height: 20px;
+  width: 20px;
+  border: 2px solid rgba(117, 117, 117, 0.866);
+  border-radius: 50px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  transition: 0.05s;
+  z-index: -10;
+}
+
+.mousemove3 {
+  height: 40px;
+  width: 40px;
+  border: 2px solid rgba(173, 173, 173, 0.948);
+  border-radius: 50px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  transition: 0.15s;
+  background: rgba(239, 239, 239, 0.133);
+  z-index: -10;
 }
